[tool.poetry]
name = "persiann_api"
version = "0.1.0"
description = "Unofficial PERSIANN Python API."
authors = ["martins6 <adrielfalcao@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.5"
setuptools = "57.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
